更新首页布局，添加动画按钮和面包屑导航

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background-color: #e6e6ff;
-    width:100vw;
-    overflow-x: hidden;
+body {
+  background-color: #e6e6ff;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+.animateButton {
+  animation-duration: 10000ms;
 }
