--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,12 @@ body {
   width: 100vw;
   /* margin: 0 auto; */
   overflow-x: hidden;
+  
 }
 
+html {
+  font-size: 14px; /* 设置根元素字体大小为14px */
+}
 .animateButton {
   animation-duration: 10000ms;
 }
