--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,8 @@
 body {
   background-color: #e6e6ff;
   width: 100vw;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   overflow-x: hidden;
-  
 }
 
 html {
